--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,8 +4,18 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<h1>Welcome, <span th:text="${user.getUsername()}"></span>!</h1>
+<h2>Your roles:</h2>
+<ul>
+    <li th:each="role : ${user.getRoles}" th:text="${role.name()}"></li>
+</ul>
 
-
+<header>
+    <nav>
+        <ul>
+            <li><a th:href="@{/logout}">Logout</a></li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
